--- a/vignettes/LDna_basics.Rmd
+++ b/vignettes/LDna_basics.Rmd
@@ -12,7 +12,7 @@ An Introduction to **LDna** package: the basics
 
 Introduction
 ------------
-This vignette provides a tutorial to the **LDna** package with emphasis on demonstrating the basics of the method.
+This vignette provides a basic tutorial to the **LDna** package.
 
 LDna uses network analyses to find clusters of loci in high linkage disequilibrium (LD) from population genomic data sets. In LD networks vertices represent loci and edges represent LD values above given thresholds. Starting from a high LD threshold value, only a few loci will be connected to each other. As the LD threshold is lowered, more and more edges and loci are added to the network allowing clusters to 'grow' with respect to numbers of loci and edges. Distinct clusters that remain separate across large range of LD thresholds indicate subsets of loci that represent different population genetic signals in the data. At sufficiently low LD threshold values all loci will eventually merge (connect by at least one edge) and form a single cluster.
 
@@ -66,7 +66,7 @@ ldna$stats
 #### Identify and extract clusters
 Next we proceed with studying the tree and extracting clusters using the function `extractClusters`. In this process we need to decide which clusters are consider as outliers with respect to their $\lambda$-values. An outlier cluster (OC) is defined as any cluster with a $\lambda$-value higher than $$\lambda_{lim(\varphi)}=median+mad*\varphi$$ where $mad$ is the *median absolute deviation* (see `?mad` for details) across all $\lambda$-values, and $\varphi$ is a user defined factor (in reality the argument *constant* for the `mad` function). Thus, $\varphi$ (controlled by the argument *phi*) determines how stringent LDna is with respect to considering a cluster an *OC*. This makes the absolute values of $\lambda$ irrelevant as each value is assessed in relation to all other values in the data set/tree. It is also possible to define the minimum number of edges, $|E|_{min}$ (specified by the argument *min.edges*), to restrict which branches are shown in the tree (this is necessary for larger data sets). In order to simplify this process, a tip with zero edge length is added for each node/cluster (this s covered in more detail in the advanced tutorial). Here we set *min.edges=0* in order to visualise the entire tree, including branches representing individual loci. We set *phi=1*, but any value between 0 and 2 will give identical result.
 
-By default, the function `extractClusters` prints two figures. The first shows all $\lambda$-values in increasing order, where the red dashed line indicates $\lambda_{lim}$ above which any value is considered as an outlier, indicated in red. In this analysis two clusters: *2_08* and *5_58*, are outliers. The second figure shows the tree that visualises the cluster merging process. Only tip labels for the two internal branches that comprise OCs are shown and the branches leading to these nodes are colored red.
+By default, the function `extractClusters` prints two figures. The first shows all $\lambda$-values in increasing order, where the red dashed line indicates $\lambda_{lim}$ above which any value is considered as an outlier (indicated in red). In this analysis two clusters: *2_08* and *5_58*, are outliers. The second figure shows the tree that visualises the cluster merging process. Only tip labels for the two internal branches that comprise OCs are shown and the branches leading to these nodes are colored red. Note also the extra tips with zero branch lengths associated with every node as mentioned above.
 ```{r fig.width=5, fig.height=5}
 clusters <- extractClusters(ldna, min.edges = 0, phi = 1)
 ```
@@ -84,13 +84,13 @@ clusters
 As seen above, OC *6_0.48* represents the merging of the two previous OCs (*2_0.8* and *5_0.68*). To distinguish that an OC contains loci from OCs extracted at an higher LD threshold than itself we denote it as a *"compound outlier cluster"*, *"COC"*, as opposed to a *"single outlier cluster"*, *"SOC"*. Typically we are mainly interested in SOCs and thus by default only SOCs are considered. However, as in the example above, when *rm.COCs=FALSE* all OCs are shown in the figures (and extracted) and any *COCs* are colored blue.
 
 #### `summaryLDna`
-Based on the outfiles produced above (*ldna*, *clusters* and *LDmat*), information of the OCs can be further summarizes by the function `summaryLDna`. In addition to the information already available from the *ldna* file above, `summaryLDna` outputs a data frame with the following information for each extracted cluster: *"Type"*, which indicates whether an *OC* is a *SOC* or a *COC*; *"Merge.at"*, which indicates at which LD threshold the clusters merge and; *"Mean.LD"* which gives the mean of all pairwise LD values within the OC.
+Based on the outfiles produced above (*ldna*, *clusters* and *LDmat*), information of the OCs can be further summarizes by the function `summaryLDna`. In addition to the information already available from the *ldna* file above, `summaryLDna` outputs a data frame with the following information for each extracted cluster: *"Type"*, which indicates whether an *OC* is a *SOC* or a *COC* (for the given settings for *min.edges* and *phi*); *"Merge.at"*, which indicates at which LD threshold the clusters merge and; *"Mean.LD"* which gives the mean of all pairwise LD values within the OC.
 ```{r, comment=NA}
 summary <- summaryLDna(ldna, clusters, LDmat)
 summary
 ```
 #### `plotLDnetworks`
-Lastly the function `plotLDcluster` is used to visually inspect the extracted clusters. This function is based on functions from the package **igraph** and always needs the original LD matrix as an input. First we can plot the full network at a given threshold by setting *option=1* and specifying the threshold. As this can be done without any additional information, this should be the first to as it gives a first impression of how much clustering exists in the data (see the advanced tutorial for details). At LD *threshold=0.6* the two OCs (corresponding to *2_0.08* and *5_0.68*) are still separate, i.e. not connect by any edge.
+Lastly the function `plotLDcluster` is used to visually inspect the extracted clusters. This function is based on functions from the package **igraph** and always needs the original LD matrix as an input. First we can plot the full network at a given threshold by setting *option=1* and specifying the threshold. As this can be done without any additional information besides the LD matrix, this should be the first thing to do with the data as it gives a first impression of how much clustering exists (see the advanced tutorial for details). At LD *threshold=0.6* the two OCs (corresponding to *2_0.08* and *5_0.68*) are still separate, i.e. not connect by any edge.
 ```{r fig.width=3, fig.height=3}
 g <- plotLDnetwork(LDmat=LDmat, option=1, threshold=0.6)
 ```
@@ -98,7 +98,7 @@ At LD threshold=0.4 all loci are connected to a single cluster by at least one e
 ```{r fig.width=3, fig.height=3}
 g <- plotLDnetwork(LDmat=LDmat, option=1, threshold=0.40)
 ```
-At the core `extractClusters` lies two functions from the package **igraph**: `graph.adjacency` and `plot.igraph`. The below example is used to show how these functions can be used to for instance show all vertex names (i.e locus names) and all LD values for the edges.
+At the core `extractClusters` lies two functions from the package **igraph**: `graph.adjacency` and `plot.igraph`. The below example is used to show how these functions can be used to for instance show all vertex names (i.e locus names) and all LD values for the edges. Igraph is highly flexible and for custom networks and `?igraph` is a good place to start.
 ```{r fig.width=5, fig.height=5}
 # Creates a 'weighted' graph object from our lower diagonal LD matrix
 g <- graph.adjacency(LDmat, mode="lower", diag=FALSE, weighted=T)
@@ -113,7 +113,7 @@ With *option=2*, by default `plotLDnetwork` plots a network for each OC at an LD
 ```{r fig.width=3, fig.height=3}
 plotLDnetwork(ldna, LDmat, option=2, clusters=clusters, summary=summary)
 ```
-By setting the argument *after.merger=TRUE*, the network is printed at an LD threshold just after merger. Note that the networks are plotted at different LD thresholds compared to above. Overall `extractClusters` is a highly customizable functions which will be further demonstrated in the advanced tutorial. 
+By setting the argument *after.merger=TRUE*, the network is printed at an LD threshold just after merger. Note thus that the networks are plotted at different LD thresholds compared to above. Overall `extractClusters` is a highly customizable functions which will be further demonstrated in the advanced tutorial. 
 ```{r fig.width=3, fig.height=3}
 plotLDnetwork(ldna, LDmat, option=2, clusters=clusters, summary=summary, after.merger=TRUE)
 ```
