minor updates on documentation

--- a/vignettes/LDna_advanced.Rmd
+++ b/vignettes/LDna_advanced.Rmd
@@ -1,20 +1,22 @@
 <!--
 %\VignetteEngine{knitr}
-%\VignetteIndexEntry{An introduction to the LDna package: Advanced}
+%\VignetteIndexEntry{An introduction LDna: Advanced}
 -->
 
 ```{r setup, include=FALSE}
 library(knitr)
+library(LDna)
 ```
 
-An introduction to the **LDna** package: advanced
+An introduction **LDna**: Advanced
 =======================================
+####Petri kemppainen, April 5, 2014
 
 Introduction
 ------------
-This tutorial demonstrates the use of LDna on a RAD sequence landscape genomics data set form a Southeast Asian mosquito malaria vector, *Anopheles baimaii*. This species has a widespread distribution extending from Northeast India, through Myanmar and into Thailand. Prior polytene chromosome mapping studies suggests that one polymorphic inversion is found on each of the five chromosome arms (2L, 2R, 3L, 3R and the X-chromosome) in *A. baimaii* and that they constitute up to 43% of their respective chromosomes {Baimai:1988fz, Baimai:1988tl, Poopittayasataporn:1995up}. Intraspecific inversion polymorphism is exceptionally prone to causing high LD between large sets of loci that are easily identified by LDna from population genomic data sets. The full RAD sequence data set consists of 3828 SNPs from 184 samples and 91 geographical sites but here we only use a random subset comprising 25% of these loci called `r2.baimaii_subs`. This tutorial assumes you have read and understood the `LDna::LDna_basics` tutorial.
+This tutorial demonstrates the use of LDna on a RAD sequence landscape genomics data set form a Southeast Asian mosquito malaria vector, *Anopheles baimaii*. This species has a widespread distribution extending from Northeast India, through Myanmar and into Thailand. Prior polytene chromosome mapping studies suggests that one polymorphic inversion is found on each of the five chromosome arms (2L, 2R, 3L, 3R and the X-chromosome) in *A. baimaii* and that they constitute up to 43% of their respective chromosomes [1-3]. Intraspecific inversion polymorphism is expected to cause high LD between large sets of loci that are easily identified by LDna from population genomic data sets (Kemppainen et al., unpublished). The full RAD sequence data set consists of 3828 SNPs from 184 samples and 91 geographical sites but here we only use a random subset comprising 25% of these loci called `r2.baimaii_subs`. This tutorial assumes you have read and understood the `LDna::LDna_basics` tutorial.
 
-Pipeline
+Linkage disequilibrium network analysis
 ------------
 ### Installation
 See `LDna::LDna_basics`
@@ -22,11 +24,10 @@ See `LDna::LDna_basics`
 ### Explore data
 To access sample data:
 ```{r}
-require(LDna)
 data(LDna)
 LDmat <- r2.baimaii_subs
 ```
-With only a matrix of pairwise LD values from a popoulation genomics data set it is possible to plot networks at different LD thresholds to get a good idea of how much 'LD clustering' there is in the data set. This is achieved by the `plotLDnetwork` function and as can be seen below, at LD threshold 0.8 not much interesting is happening. However, at 0.5 and 0.3 several distinct clusters can be seen and we have thus good reason to be excited. Between 0.5 and 0.3 some merging of large cluster have occurred, and the idea behind LDna is to find the exact LD thresholds when this happens such that these clusters can be extracted just before they merge. There will always be least one large cluster, given a low enough LD threshold value, but most often there will be several, sometimes up to hundreds, depending on LD threshold and data set.
+With only a matrix of pairwise LD values from a popoulation genomics data set it is possible to plot networks at different LD thresholds to get an idea of how much 'LD clustering' exists in the data. This is achieved by the `plotLDnetwork` function and as can be seen below, at LD threshold 0.8 not much clustering can be seen. However, at 0.5 and 0.3 several distinct clusters can be seen. Between 0.5 and 0.3 some merging of large cluster have occurred, and the idea behind LDna is to find the exact LD thresholds when this happens such that these clusters can be extracted just before this happens. There will always exist at least one large cluster in a data set, given a low enough LD threshold value, but most often there will be several, sometimes up to hundreds, depending on LD threshold and data set.
 ```{r, fig.width=9, fig.height=3, fig.show='hold'}
 par(mfcol=c(1,3))
 plotLDnetwork(LDmat=LDmat, option=1, threshold=0.8)
@@ -34,9 +35,9 @@ plotLDnetwork(LDmat=LDmat, option=1, threshold=0.5)
 plotLDnetwork(LDmat=LDmat, option=1, threshold=0.3)
 ```
 ### The LDna pipeline
-Linkage disequilibrium network analysis is a powerful exploratory tool for population genomic data sets. The LDna process is iterative involving several analysis steps. Once clusters have been identified these need to be visually explored by plotting networks as well as further analysed for instance by standard analyses of  genetic structure and mapping to reference genome(s), if possible. Only then can the 'biological relevance' of an extracted cluster be assessed. In this tutorial we focus on a data set where we already know which clusters are associated with inversions from extensive downstream analyses. This tutorial will not cover the downstream analyses.
+The LDna process is iterative involving several analysis steps. Once clusters have been identified they need to be visually explored by plotting networks as well as further analysed for instance by standard analyses of  genetic structure and mapping to reference genome(s), if possible. Only then can the 'biological relevance' of an extracted cluster be assessed. In this tutorial we focus on a data set where we already know which clusters are associated with inversions from extensive downstream analyses. This tutorial will not cover the downstream analyses.
 
-In practice, one would most likely explore the data set for a while through LDna, and once reasonably satisfied, proceed with some quick downstream analyses. This information would then be fed back for a second round of LDna analyses, if necessary. This works well for reduced representation population genomic data sets with not too many loci (up to ~10000) such as RAD sequence data sets. If your data set is much larger than this, it is always possible to subsample. If the signatures of LD are strong, not more than 1000 SNPs are sometimes necessary, as will be demonstrated here. If your data set is large, I would recommend starting with a subsample, say up up to 10000 SNPs (and perhaps only from a subset of chromosomes, if this information is known) to get an overall idea about what factors are causing LD in the data before attemting to analyse the full data set.
+In practice, one would most likely explore the data set for a while through LDna, and once reasonably satisfied, proceed with simple downstream analyses. This information would then be fed back to a second round of LDna analyses, if necessary. This works well for reduced representation population genomic data sets with not too many loci (up to ~10000) such as RAD sequence data sets. If the signatures of LD are strong, not more than 1000 SNPs are sometimes necessary, as will be demonstrated here. If your data set is large, it is a good idea to start with a subsample (up to ~10000 SNPs and perhaps only from a subset of chromosomes, if this information is available) to get an overall idea about what factors are causing LD in the data before attemting to analyse the full data set, if necessary.
 
 ### Produce raw data for LDna
 The first step in LDna produces the raw data for all the subsequent analyses using the function `LDnaRaw`.
@@ -44,7 +45,7 @@ The first step in LDna produces the raw data for all the subsequent analyses usi
 ldna <- LDnaRaw(LDmat)
 ```
 ### Exploring cluster merger with decreasing LD threshold
-Let's first have a look at the *single linkage clustering tree*, without being concerned about which clusters to extract. To do this we set the option `extract` to `FALSE`, and the only other thing we need to worry about is $|E|_{min}$, controlled by `min.edges` (see `LDna::basics`). With `min.edges=1`, all clusters (with a minimum of two loci connected by one edge) are shown and it is relatively hard to see what is going on in the tree. However, already `min.edges=5`, four separate large clades can be seen. At `min.edges=18` only these four are visible; each of them representing clusters that remain large (above $|E|_{min}$) throughout a large range of LD thresholds.
+Let's first have a look at the *single linkage clustering tree* (see `LDna::LDna_basics`), without being concerned about which clusters to extract. To do this we set the argument `extract` to `FALSE`, and the only additional arument we need to specify is $|E|_{min}$, controlled by `min.edges` (see `LDna::LDna_basics`). With `min.edges=1`, all clusters (with a minimum of two loci connected by one edge) are shown and it is relatively hard to see what is going on in the tree (see below). However, already with `min.edges=5`, four separate large clades can be seen. At `min.edges=18` only these four are visible; each of them representing clusters that remain large (above $|E|_{min}$) throughout a large range of LD thresholds.
 ```{r, fig.width=9, fig.height=3, fig.show='hold'}
 par(mfcol=c(1,3))
 extractClusters(ldna, min.edges = 1, plot.tree = TRUE, extract=FALSE)
@@ -58,70 +59,65 @@ plotLDnetwork(LDmat=LDmat, option=1, threshold=0.31)
 plotLDnetwork(LDmat=LDmat, option=1, threshold=0.30)
 ```
 ### "Single outlier clusters" and "compound outlier clusters"
-Outlier $\lambda$ values imply the merging of large and distinct clusters comprising loci bearing different LD signals (see `LDna::basics`). However, as we can see from the above trees, there is a succession of cluster merging as the LD threshold is lowered. Along this succession only the first merger (moving form right to left along a clade in a tree) involves clusters were both are likely caused by separate distinct evolutionary factors or forces. To distinguish that a cluster is the first outlier cluster, *OC*, moving from right to left along a clade, we call this *"single outlier cluster"*, or *"SOC"*. If an *OC* already is a result of the merging of two *OCs* (at a higher LD threshold), we call this a *"compound outlier cluster"*, or *"COC"* to denote that it likely contains loci bearing different LD signals. Normally we are only interested in *SOCs*, but for the purpose of illustration we will next demonstrate a tree where both *SOCs* and *COCs* are indicated. This is achieved by setting the option `rm.COCs` to `FALSE` in the `extractClusters` function. In this figure blue colour indicates that the cluster in question is a *COC* rather than a *SOC* (red). We set both `min.edges` and `phi` to relatively high values for this data set (14 and 5, respectively), such that we only get a few large *OCs* (this is covered in more detail below).
+Outlier $\lambda$ values imply the merging of large and distinct clusters comprising loci bearing different LD signals (see `LDna::LDna_basics`). However, as we can see from the above trees, there is a succession of cluster merging as the LD threshold is lowered. Along this succession only the first merger (moving form right to left along a clade in a tree) involves clusters were both are likely caused by separate distinct evolutionary factors or forces (see also `LDna::LDna_basics`). To distinguish that a cluster is the first outlier cluster, *OC*, moving from right to left along a clade, we call this *"single outlier cluster"*, or *"SOC"*. To distinguish that an *OC* contains loci from *OCs* extracted at an higher LD threshold than itself we denote it as a *"compound outlier cluster"* to denote that it potentially contains loci bearing LD signals from more than two evolutionary factor or force. Whether this indeed is the case can, however, only be known from downstream analyeses. Normally we are only interested in *SOCs*, but for the purpose of illustration we will next demonstrate a tree where both *SOCs* and *COCs* are indicated. This is achieved by setting the argument `rm.COCs` to `FALSE` in the `extractClusters` function. In this figure blue colour indicates that the cluster in question is a *COC* rather than a *SOC* (red). We set both `min.edges` and `phi` to relatively high values for this data set (18 and 4, respectively), such that we only get a few large *OCs* (this is covered in more detail below).
 ```{r fig.width=10, fig.height=5, tidy=TRUE}
 par(mfcol=c(1,2))
-clusters <- extractClusters(ldna, min.edges = 10, phi = 5, rm.COCs = F, plot.tree = T, plot.graph = T)
+clusters <- extractClusters(ldna, min.edges = 18, phi = 4, rm.COCs = F, plot.tree = TRUE, plot.graph = FALSE)
 ```
-The column: "Type" in the following summary table indicates whether an *OC* is a *COC* or a *SOC*. 
+As can be seen from the above tree, *COC 149_0.32* includes loci from *SOC 112_0.39*, and *COC 111_0.27* in turn includes loci from *COC 149_0.32* and *SOC 148_0.32*. Thise results can further be summerised by the function `summaryLDna` (see `LDna::LDna_basics` for details), where the column: *"Type"* indicates whether an *OC* is a *COC* or a *SOC*. 
 ```{r, comment=NA}
 summary <- summaryLDna(ldna, clusters, LDmat)
 summary
 ```
-If we now plot all the extracted clusters (default settings), any COC will be colored blue and any SOC will be colored red. As can be seen from the above tree, *COC 149_0.32* contains loci from *SOCs 112_0.39* and *COC 111_0.27* in turn contains loci from *COC 149_0.32* and *SOC 148_0.32*. Thus, the main focus should be on *SOCs* not *COCs* (but see below).
+If we now plot all the extracted clusters (default settings), any *COC* will be colored blue and any SOC will be colored red. As can be expected, *SOCs* are generally more uniform in shape compared to *COCs*.
 ```{r, fig.width=9, fig.height=6, fig.show='hold'}
 par(mfcol=c(2,3))
 plotLDnetwork(ldna, LDmat, option=2, clusters=clusters, summary=summary)
 ```
 ### Identifying and extracting clusters, the effects of $\varphi$
-For the follwing analyses we will keep `rm.COSs=TRUE`, i.e automatically remove any *COCs* from the analyses. As seen above, the two parameters that go into the function `extractClusters` are $|E|_{min}$ and $\varphi$ controlled by the options `min.edges` and `phi`. I will first focus on $\varphi$ while keeping $|E|_{min}$ fixed (at 18). Thus, let's look at two analyses that only differ in their $\varphi$-value (4 and 2 respectively). The main difference between them is that at `phi=$`, instead of *SOC 148_0.32* and *112_0.39* (which now are *COCs*) on the two bottom branches instead we now  get *SOCs 90_0.47*  and *75_0.53*. In other words; *OCs 47_0.46* and *90_0.47* mask *OCs 148_0.32* and *112_0.39* as a *COCs* going from `phi=4` to `phi=2`.
-```{r, fig.width=10, fig.height=5, tidy=TRUE}
+ As seen above, the two main paramenters for the function `extractClusters` are $|E|_{min}$ and $\varphi$ controlled by the arguments `min.edges` and `phi`. For the follwing analyses `rm.COSs` is kept at `FALSE`, i.e both *SOCs* and *COCs* are considered. While keeping $|E|_{min}$ fixed (at 18), changing `phi` from `4` to `2`, instead of *SOC 148_0.32* and *112_0.39* (which now are *COCs*) on the two bottom branches we now get *SOCs 90_0.47* and *75_0.53*. In other words; *OCs 47_0.46* and *90_0.47* mask *OCs 148_0.32* and *112_0.39* as a *COCs* going from `phi=4` to `phi=2`. Below we also show a graph where all lambda values are ordered and any outlier values above $\lambda_{lim}$ (see `LDna::LDna_basics`) are indicated.
+```{r, fig.width=8, fig.height=4, tidy=TRUE}
 par(mfcol=c(1,2))
-clusters_4 <- extractClusters(ldna, min.edges = 18, phi = 4, rm.COCs = F, plot.tree = T, plot.graph = T)
-clusters_2 <- extractClusters(ldna, min.edges = 18, phi = 2, rm.COCs = F, plot.tree = T, plot.graph = T)
+clusters_4 <- extractClusters(ldna, min.edges = 18, phi = 4, rm.COCs = FALSE, plot.tree = TRUE, plot.graph = TRUE)
+clusters_2 <- extractClusters(ldna, min.edges = 18, phi = 2, rm.COCs = FALSE, plot.tree = TRUE, plot.graph = TRUE)
 ```
-So which setting should we use? Let's firs look at the relationship between *OCs 148_0.39* and *90_0.47*. From the summary (below) we can see that the main differences are the size, mean LD and $\lambda$. Thus, if we were to use `phi=2` we would identify a SOC from the clade in question that is smaller (with respect to numbers of loci) compared to with `phi=4`. However, the mean LD in *OC 90_0.47* is also significantly higher than in *OC 148_0.39*. Note that in this particular case *148_0.39* is a defined as a *COC* (as it contains loci from *90_0.47*). Note also that the only way to access both *OCs* in the same analysis is to set option `rm.COCs` to `TRUE`.
+So which setting should we use for `phi` and which *OC: 148_0.39* or *90_0.47* whould we focus on? From the summary (below) we can see that the main differences between these two *OCs* are the size, mean LD and $\lambda$. Thus, with `phi=2` we would identify a *SOC* (*OC 90_0.47*) from the clade in question that is smaller (with respect to numbers of loci), have higher the mean LD and lower $\lambda$ relative to `phi=4` (*OC 148_0.39*).
 ```{r, comment=NA}
 summary <- summaryLDna(ldna, clusters_2[c(2,5)], LDmat)
 summary
 ```
-To demonstrate why there is such a large difference in $\lambda$ between these two *OCs*, I will introduce a few useful aspects of the `plotLDnetwork` function. $\lambda$ is a function of both the focal cluster (cluster before merger) and the cluster/loci it merges with (see the `LDna::basics`), and we can use `plotLDnetwork` to specifically explore this. This is achieved by only showing the focal cluster and the cluster/loci it merges with by setting `full.network` to `FALSE` but also allowing any clusters/loci the focal cluster merges with in the network by setting `include.parent` to `TRUE`. In addition, we can choose to show the clusters before or after merger via `after.merger` (`TRUE` for showing network after merger and `FALSE` for before, default is `FALSE`) as follows:
+To furhter explore the differences between these two *OCs*, a few useful aspects of the `plotLDnetwork` function will be demonstrated. $\lambda$ is a function of both the focal cluster (cluster before merger) and the cluster/loci it merges with (see the `LDna::basics`), and we can use `plotLDnetwork` to specifically explore this. This is achieved by only showing the focal cluster and the cluster/loci it merges with by setting `full.network` to `FALSE` but also allowing any clusters/loci the focal cluster merges with in the network by setting `include.parent` to `TRUE`. In addition, we can choose to show the clusters before or after merger via `after.merger` (`TRUE` for showing network after merger and `FALSE` for before, default is `FALSE`) as follows:
 ```{r, fig.width=8, fig.height=4, fig.show='hold', tidy=TRUE}
 par(mfcol=c(1,2))
 plotLDnetwork(ldna, LDmat, option=2, clusters=clusters_2[c(2,5)], summary=summary, full.network=FALSE, include.parent=TRUE, after.merger=FALSE)
 ```
-At first, the above seems strange as for *OC 90_0.47* only the focal cluster is shown (all vertices are colored red) in contrast to *OC 148_0.39* (note also that *OC 148_0.39* is blue as it is technically a *COC*). But when we then look at the networks after merger (below) we can see that indeed *90_0.47* does not merge with any cluster(s) but instead with two separate loci. Although *90_0.47* only merges with two loci, there is a large difference in the pairwise LD values between them and the remaining loci, thus giving this cluster a relatively high $\lambda$-value. This is indicated by the large difference in LD threshold values when OC *90_0.47* firstly appears (0.47) compared to when it merges with the two loci (0.43). Which one(s) of the two *OCs* do you then keep?. This question cannot fully be answered until some downstream analyses of both clusters have been performed. In our case I can report that all loci in *OC 148_0.39* map to the same inverted region and thus `phi=4` makes the most sense.
+At first, the above seems strange as for *OC 90_0.47* only the focal cluster is shown (all vertices are colored red) in contrast to *OC 148_0.39* (note also that *OC 148_0.39* is blue as it is technically a *COC*). When networks are plotted after merger (below) we can see that indeed *90_0.47* does not merge with any cluster(s) but instead with two separate loci. Although *90_0.47* only merges with two loci, there is a large difference in the pairwise LD values between them and the remaining loci, thus giving this cluster a relatively high $\lambda$-value. This is indicated by the large difference in LD threshold values when *OC 90_0.47* firstly appears (0.47) compared to when it merges with the two loci (0.43). Which one(s) of the two *OCs* do you then keep?. This question cannot fully be answered until some downstream analyses of both clusters have been performed. In this case we know that all loci in *OC 148_0.39* map to the same inverted region and thus `phi=4` makes the most sense if one is interested in extracting as many loci as possible.
 ```{r, fig.width=8, fig.height=4, fig.show='hold', tidy=TRUE}
 par(mfcol=c(1,2))
-plotLDnetwork(ldna, LDmat, option=2, clusters=clusters_2[c(2,5)], summary=summary, full.network=F, include.parent=T, after.merger=T)
+plotLDnetwork(ldna, LDmat, option=2, clusters=clusters_2[c(2,5)], summary=summary, full.network=FALSE, include.parent=TRUE, after.merger=TRUE)
 ```
-With respect to suggestions for your own analyses, I generally consider $\varphi$ values 2-3 to be low, 3-5 to be medium and 5-8 to be high. As outlier $\lambda$ values are relative to the median of all values in the tree this is likely to be true for any data set. Going below 2 and above 8 makes little sense except for the purpose of demonstration. In practice, for smaller data sets, the merging of 'biologically relevant clusters' may not cause exceptionally high $\lambda$-values (even relative to all other values in the data) and thus, in order to not miss such mergers, it makes sense to in these cases keep $\varphi$ relatively low for small data sets. You will always get at least one *SOC* from any ‘large clade’ in a tree with relatively low $\varphi$ values. The risk with a 'too' low $\varphi$ is that you may not be able to extract the maximum possible number of loci that are associated with a particular evolutionary factor/force. On the other hand, these loci will be in higher LD with each other and in this sense low values of $\varphi$ can be considered conservative. If $\varphi$ is set 'too' high you risk missing a merger and may thus end up grouping together loci that ultimate are caused by separate evolutionary factors/forces, which is worse. However, downstream analysis can usually spot this.
+Based on our experience, we consider $\varphi$-values: 2-3 to be low, 3-5 to be medium and 5-8 to be high. As outlier $\lambda$ values are relative to the median of all values in the tree this is likely to be true for any data set. Going below 2 and above 8 makes little sense except for the purpose of demonstration. In practice, for smaller data sets, the merging of 'biologically relevant clusters' may not cause exceptionally high $\lambda$-values (even relative to all other values in the data) and thus, in order to not miss such mergers, it makes sense to keep $\varphi$ relatively low for small data sets. With relatively low $\varphi$ values you will always get at least one *SOC* from each ‘large clade’ in a tree. The risk with a 'too' low $\varphi$ is that you may not be able to extract the maximum possible number of loci that are associated with a particular evolutionary factor/force. On the other hand, these loci will be in higher LD with each other and are thus more likely to be more closely associate with the evolutionary force/factor in question. If $\varphi$ is set 'too' high there is a risk that a 'significant' merger will be missed leading to the identification of an *OC* that contans loci bearing LD signals from more than one distinct evolutionary factor/forces (i.e. it is in reality a *COC* not a *SOC*). However, downstream analysis can usually spot this.
 
-There is also a possibility to use a fixed value of $\lambda_{lim}$ via the `lambda.lim` option in `excractClusters` as follows. In fact, just looking at the below figure, if you would decied upon a $\lambda_{lim}$ yourself, an appropriate value would be two, as this clearly separates two distinct groups (or 'clusters') of $\lambda$ values as demonstrated below. 
-```{r, fig.width=4, fig.height=4, tidy=TRUE}
-clusters <- extractClusters(ldna, LDmat, min.edges = 18, lambda.lim=2, rm.COCs = T, plot.tree = FALSE, plot.graph = TRUE)
-```
 ### Identifying and extracting clusters, the effects of $|E|_{min}$
-In contrast to $\varphi$, what constitutes a low and a high value for $|E|_{min}$ is highly dependent on the number of loci in the data set, more specifically the resulting average SNP density in the genome. The more loci the more likely are you to sample SNPs from small blocks of non-recombining regions of the genome, so-called haplotype blocks. These are expected to result in many small but highly 'compact' clusters involving loci from very small genomic regions. However, generally LD breaks down within ~10 kb in large outbreeding populations {ref} and typical population genomics data set rarely reach such SNP densities. As a rough guideline, I suggest that that a good starting value for $|E|_{min}$ is 1-2% of the total number of SNPs in the data set. In practice, if the LD signals in the data are robust, a large span of different $|E|_{min}$ values will result in exactly the same *OCs*. Although small *OCs* may potentially also be important/interesting, $|E|_{min}$ is mainly a matter of convenience; you don’t want to do all the downstream analyses for hundreds of *SOCs* (and the biggest ones are always likely to be the most interesting). Compare for instance the follwing example where `min.edges` is deliberately set at a relatively low value (8).
+In contrast to $\varphi$, what constitutes a low and a high value for $|E|_{min}$ is highly dependent on the number of loci in the data set, more specifically the resulting average SNP density in the genome. The more loci the more likely are SNPs to come from small blocks of non-recombining regions of the genome, so-called haplotype blocks. These are expected to result in many small but highly 'compact' clusters involving loci from very small genomic regions. However, generally LD breaks down rapidly in large outbreeding populations [4] and typical population genomics data set rarely reach such SNP densities. As a rough guideline, a good starting value for $|E|_{min}$ is 1-2% of the total number of SNPs in the data set. In practice, if the LD signals in the data are robust, a large span of different $|E|_{min}$ values will result in exactly the same *OCs*. Although small *OCs* may potentially also be important/interesting, $|E|_{min}$ is mainly a matter of convenience; you don’t want to do all the downstream analyses for hundreds of *SOCs* (and the biggest ones are always likely to be the most interesting). In the follwing example  `min.edges` is deliberately set at a relatively low value (8).
 ```{r, fig.width=4, fig.height=4, comment=NA, tidy=TRUE}
 clusters <- extractClusters(ldna, min.edges=8, phi=2, rm.COCs=TRUE, plot.tree=TRUE, plot.graph=FALSE)
-summary <- summaryLDna(ldna, clusters, LDmat)
 ```
-Here we will focus on two smallest clusters (the remaining we already know are associated with inversions). In the example data set here, we have allowed several SNPs from each RAD locus (as long as they are informative) and these are in many cases likely to be in high LD with each other. As there are usually no more than 4 such SNPs from each RAD locus, these alone are not likely to cause large clusters. However, each restriction cut site leads to two RAD adjacent RAD loci and these as well are likely to be in high LD. As can be seen below, the three small clusters here appear to be containing several SNPs from the same RAD loci. Thus, our conclusion is that these three small clusters are mainly artifacts of the above.
+Here we will focus on two smallest clusters (the remaining we already know are associated with inversions). From downstream analyses of the full data set (Kemppainen et al. unpublished), we know that *OC 118_0.38* to some extent is associated with overall poulation history of this species (and not with any inversion). In the example data set here, we have allowed several SNPs from each RAD locus and these are in many cases likely to be in high LD with each other. In addition, each restriction cut site can lead adjacent RAD loci and these as well are likely to be in high LD. As seen below, the 11 SNPs from *OC 194_0.21* only represent 7 unique RAD loci (first number beofre '.' indicates RAD locus) and mapping these loci to the reference genomes reveals that at least three of these pairs are come from the same restriction cut site. This demonstrates that LDna indeed is sensitive to finding clusters, but that care must be taken when assessing their biological relevance.
+
 ```{r, fig.width=4, fig.height=4, comment=NA}
-summary <- summaryLDna(ldna, clusters[c(3,6)], LDmat)
-summary
+clusters$"194_0.21"
 ```
-As can be seen from the networks (below), these two cluster do indeed look promising, and shows the power of LDna to identify even small but potentially interesting clusters.
 ```{r, fig.width=8, fig.height=4, comment=NA}
 par(mfcol=c(1,2))
+summary <- summaryLDna(ldna, clusters=clusters[c(3,6)], LDmat)
 plotLDnetwork(ldna, LDmat, option=2, clusters=clusters[c(3,6)], summary=summary)
 ```
 ### Final analysis
-Finally, having explored the data at sufficient depth we can run the full LDna pipeline with appropriate parameter values that result in the identification of only the *OCs* that we know are associated with inversions (which we can only know from downstream analyses).
+Having explored the data at sufficient depth we can run the full LDna pipeline with appropriate parameter values that result in the identification of only the 'most interesting' *OCs*, in this case those where downstream analses have allowed us to reveal their association with inversions.
 ```{r, fig.width=10, fig.height=5, comment=NA, fig.show='hold', tidy=TRUE}
 par(mfcol=c(1,2))
-clusters <- extractClusters(ldna, min.edges = 13, phi=4, rm.COCs = T, plot.tree = T, plot.graph = T)
+clusters <- extractClusters(ldna, min.edges = 18, phi=4)
 ```
 ```{r, comment=NA}
 clusters
@@ -132,9 +128,16 @@ summary
 par(mfcol=c(2,2))
 plotLDnetwork(ldna, LDmat, option=2, clusters=clusters, summary=summary)
 ```
-Note that there are two apporaches for choosing which *OCs* to keep for downstream analyeses. First, you can play around with different values of $|E|_{min}$ and $\varphi$ to find a setting that identifies exactly the *SOCs* you are interested in, perhaps after several rounds of downstream analyses of different *OCs*. Second, you can settle with a low value for both $|E|_{min}$ and $\varphi$ and then 'cherrypick' the *COCs* and *SOCs* (keeping `rm.COC=FALSE`) you are mostly interested for the downstram analyses. Or even analyse them all and then report which ones are potentially interesting.
 
 ### Concluding remarks on the choice of $|E|_{min}$ and $\varphi$
-Although what constitutes a ‘biologically relevant *SOC*’ cannot be known *a priori*, there are three main reasons why such theoretical *SOCs* would not be identified  from a given analysis: 1) $|E|_{min}$ is set too high such that the *SOC* in question falls below this value, 2) $\varphi$ is set too low such that the *SOC* in question is masked as a *COC* by allowing another *SOC* to be extracted at a higher LD threshold along the same ‘clade’, or 3) $\varphi$ is set too high such that the $\lambda$ value of the *SOC* in question is lower than the resulting $\lambda_{lim}$. Thus, it is necessary to explore the data set with different parameters settings for `extractClusters`, look at the resulting $\lambda$-values and tree, summarize the data (with `summaryLDna`) and then explore the clusters with `plotLDnetworks`. However, only the downstream analyses will finally reveal how 'biologically' relevant each *SOC* is likely to be. As such, LDna is a highly iterative process and has to be considered as an exploratory tool. It is a good idea for you to explore different values `min.edges` and `phi` to see how the OCs change. It may be also be useful for you to keep `rm.COCs=FALSE` in order to see how a particular *SOC* can at some paramaeter values be a *COC* and vice versa.
+Although what constitutes a ‘biologically relevant *SOC*' cannot be known *a priori*, there are three main reasons why such theoretical *SOCs* would not be identified from a given analysis: 1) $|E|_{min}$ is set too high such that the *SOC* in question falls below this value, 2) $\varphi$ is set too low such that the *SOC* in question is masked as a *COC* by allowing another *SOC* to be extracted at a higher LD threshold along the same ‘clade’, or 3) $\varphi$ is set too high such that the $\lambda$ value of the *SOC* in question is lower than the resulting $\lambda_{lim}$. 
 
-Note that exactly what cluster you in the end decide to extract for downstream analyses does not really matter and you may not even be able to find one specific setting that allows you to extract all the *OCs* you are interested in. What matter is what the downstream analyses show; there is nothing wrong to initially include many different *SOCs* and *COCs* in the downstream analyses and only then decide which of them make the most sense.
+Note that there are two apporaches for choosing which *OCs* to keep for downstream analyeses. First, you can play around with different values of $|E|_{min}$ and $\varphi$ to find a setting that identifies exactly the *SOCs* you are interested in, perhaps after several rounds of downstream analyses of different *OCs*. Second, you can settle with a low value for both $|E|_{min}$ and $\varphi$ and then 'cherrypick' the *COCs* and *SOCs* (keeping `rm.COC=FALSE`) you are mostly interested for the downstram analyses. Or even analyse them all and then report which ones are potentially interesting.
+
+Note that exactly what cluster you in the end decide to extract for downstream analyses does not really matter and you may not even be able to find one specific setting that allows you to extract all the *OCs* you are interested in. What matter is what the downstream analyses show; there is nothing wrong to initially include many different *SOCs* and *COCs* in the downstream analyses and only then decide which of them make the most sense, in fact this is hihgly recommended. 
+
+### References
+1.  Baimai V, Poopittayasataporn A, Kijchalao U (1988) Cytological differences and chromosomal rearrangements in four members of the Anopheles diruscomplex (Diptera: Culicidae). Genome 30: 372–379.
+2.	Baimai V, Thu MM, Paing M (1988) Distribution and chromosomal polymorphism of the malaria vector Anopheles dirus species D. The Southeast Asian J Trop Med Public Health 19: 661–665.
+3.	Poopittayasataporn A, Baimai V (1995) Polytene chromosome relationships of five species of the Anopheles diruscomplex in Thailand. Genome 38: 426–434. 
+4.  Slate J, Pemberton JM (2007) Admixture and patterns of linkage disequilibrium in a free-living vertebrate population. J Evol Biol 20: 1415–1427. 
